// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTaskBar 1`] = `
<div
  className="flex mt-2 h-9 bg-gray-100 border border-opacity-0 focus-within:border-opacity-100 border-gray-200 focus-within:border-yellow-500 mx-5 rounded-lg"
>
  <div
    className="flex-1 px-4 flex justify-between"
  >
    <div
      className="flex-1 flex"
    >
      <div
        className="relative w-full text-gray-400 focus-within:text-gray-300"
      >
        <div
          className="absolute inset-y-0 left-0 flex items-center"
          id="add-button"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="h-4 w-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          className="text-sm block bg-gray-100 w-full h-full pl-6 pr-3 py-2 border-transparent focus:text-gray-900 placeholder-gray-400 focus:outline-none focus:placeholder-gray-300 focus:ring-0 focus:border-transparent"
          id="new-task-text-field"
          name="addTask"
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Add Task. Press Enter to save."
          type="addTask"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddTaskBar 2`] = `
<div
  className="flex mt-2 h-9 bg-gray-100 border border-opacity-0 focus-within:border-opacity-100 border-gray-200 focus-within:border-yellow-500 mx-5 rounded-lg"
>
  <div
    className="flex-1 px-4 flex justify-between"
  >
    <div
      className="flex-1 flex"
    >
      <div
        className="relative w-full text-gray-400 focus-within:text-gray-300"
      >
        <div
          className="absolute inset-y-0 left-0 flex items-center"
          id="add-button"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="h-4 w-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          className="text-sm block bg-gray-100 w-full h-full pl-6 pr-3 py-2 border-transparent focus:text-gray-900 placeholder-gray-400 focus:outline-none focus:placeholder-gray-300 focus:ring-0 focus:border-transparent"
          id="new-task-text-field"
          name="addTask"
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Add Task. Press Enter to save."
          type="addTask"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddTaskBar 3`] = `
<div
  className="flex mt-2 h-9 bg-gray-100 border border-opacity-0 focus-within:border-opacity-100 border-gray-200 focus-within:border-yellow-500 mx-5 rounded-lg"
>
  <div
    className="flex-1 px-4 flex justify-between"
  >
    <div
      className="flex-1 flex"
    >
      <div
        className="relative w-full text-gray-400 focus-within:text-gray-300"
      >
        <div
          className="cursor-pointer absolute inset-y-0 left-0 flex items-center"
          id="add-button"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="text-yellow-500 hover:text-yellow-600 h-4 w-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          className="text-sm block bg-gray-100 w-full h-full pl-6 pr-3 py-2 border-transparent focus:text-gray-900 placeholder-gray-400 focus:outline-none focus:placeholder-gray-300 focus:ring-0 focus:border-transparent"
          id="new-task-text-field"
          name="addTask"
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Add Task. Press Enter to save."
          type="addTask"
          value="TEST"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddTaskBar 4`] = `
<div
  className="flex mt-2 h-9 bg-gray-100 border border-opacity-0 focus-within:border-opacity-100 border-gray-200 focus-within:border-yellow-500 mx-5 rounded-lg"
>
  <div
    className="flex-1 px-4 flex justify-between"
  >
    <div
      className="flex-1 flex"
    >
      <div
        className="relative w-full text-gray-400 focus-within:text-gray-300"
      >
        <div
          className="absolute inset-y-0 left-0 flex items-center"
          id="add-button"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="h-4 w-4"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          className="text-sm block bg-gray-100 w-full h-full pl-6 pr-3 py-2 border-transparent focus:text-gray-900 placeholder-gray-400 focus:outline-none focus:placeholder-gray-300 focus:ring-0 focus:border-transparent"
          id="new-task-text-field"
          name="addTask"
          onChange={[Function]}
          onKeyUp={[Function]}
          placeholder="Add Task. Press Enter to save."
          type="addTask"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

